--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -1,4 +1,42 @@
-.project-items-container{
-    display: flex;
-    justify-content: center;
+.project-item-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: top;
+	background-color: rgb(45, 45, 45);
+
+	height: 380px;
+	width: 300px;
+	margin: 20px;
+	cursor: pointer;
+}
+
+.video-player {
+	position: relative;
+	display: block;
+	flex: 1 1 0px;
+	transition: transform 500ms;
+}
+
+.video-player:hover {
+	z-index: 1000;
+	transform: scale(1.4);
+	border: 10px solid hsla(0,0%,100%,.5);
+}
+
+.card-contents {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 8px;
+}
+
+.card-contents > * {
+	color: white;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+@media screen and (max-width: 760px) {
+}
+
+@media screen and (min-width: 300px) and (max-width: 480px) {
 }
