--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,11 +1,18 @@
 .projects-container {
   width: 700px;
-  text-align: center;
   background-color: rgb(0, 0, 0);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
+
+.projects{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap:  wrap;
+}
+
 
 @media screen and (max-width: 760px) {
   .projects-container {
