--- a/src/components/about/about-contents/skills.css
+++ b/src/components/about/about-contents/skills.css
@@ -22,7 +22,30 @@
 	justify-content: space-evenly;
 }
 
-.icons-container > *{
+.icons-container > * {
+	height: 50px;
+	width: 50px;
+	font-size: 50px;
+}
+
+.icons-container-tools {
+	display: flex;
+	justify-items: center;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+
+.icons-container-tools > * {
+	margin-bottom: 8px;
+}
+
+.icons-container-tools > * > img {
+	height: 50px;
+	width: 50px;
+	font-size: 50px;
+}
+
+.icons-container-tools > #AfterEffects {
 	height: 50px;
 	width: 50px;
 	font-size: 50px;
@@ -33,7 +56,18 @@
 		font-size: 1.8vh;
 	}
 
-	.icons-container > *{
+	.icons-container > * {
+		height: 40px;
+		width: 40px;
+		font-size: 40px;
+	}
+
+	.icons-container-tools > * > img {
+		height: 40px;
+		width: 40px;
+		font-size: 40px;
+	}
+	.icons-container-tools > #AfterEffects {
 		height: 40px;
 		width: 40px;
 		font-size: 40px;
@@ -44,7 +78,17 @@
 	.skills-container > h3 > span {
 		font-size: 1.6vh;
 	}
-	.icons-container > *{
+	.icons-container > * {
+		height: 30px;
+		width: 30px;
+		font-size: 40px;
+	}
+	.icons-container-tools > * > img {
+		height: 30px;
+		width: 30px;
+		font-size: 40px;
+	}
+	.icons-container-tools > #AfterEffects {
 		height: 30px;
 		width: 30px;
 		font-size: 40px;
