--- a/src/components/about/about-contents/about-item.css
+++ b/src/components/about/about-contents/about-item.css
@@ -92,19 +92,16 @@
 .lt {
 	position: relative;
 	top: 50%;
-	/* left: 20%; */
-	/* transform: translate(-48%, -9%);  */
+
 	font-size: 3vh;
 	cursor: pointer;
 	background-color: black;
 }
 
 .gt {
-	position: absolute;
+	position: relative;
 	top: 50%;
-	/* left: 91%; */
-	/* transform: translate(-48%, -91%); */
-	/* margin-top: 21px; */
+
 	font-size: 3vh;
 	cursor: pointer;
 	background-color: black;
