--- a/src/components/cheer/cheer.css
+++ b/src/components/cheer/cheer.css
@@ -1,44 +1,44 @@
-.cheer-container{
-    display: flex;
-    justify-content: center;
+.cheer-container {
+  display: flex;
+  justify-content: center;
 }
-.player{
-    display: flex;
-    flex-direction: row;
+.player {
+  display: flex;
+  flex-direction: row;
 }
 .player > * {
-    margin: 10px;
-    cursor: pointer;
-    background-color: rgb(107, 105, 105);
-    border: 0px solid white;
-    border-radius: 5px;
-    padding: 5px;
+  margin: 10px;
+  cursor: pointer;
+  background-color: rgb(107, 105, 105);
+  border: 0px solid white;
+  border-radius: 5px;
+  padding: 5px;
 }
 
-.player > *:hover{
-    border: 2px solid white;
-    border-radius: 5px;
+.player > *:hover {
+  border: 2px solid white;
+  border-radius: 5px;
 }
-.cheer-up{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.cheer-up > img {
-    cursor: pointer;
-    margin-top: 0;
-    /* margin-left: 20px; */
-    width: 70px;
-    height: 70px;
+.cheer-up {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  cursor: pointer;
 }
 
-.cheer-up > button {
-    cursor: pointer;
-    margin-top: 20px;
-    height: 30px;
-    font-size: 1vh;
-    text-decoration: underline;
-    color: black;
+.cheer-up > div > img {
+  cursor: pointer;
+  margin-top: 0;
+  /* margin-left: 20px; */
+  width: 60px;
+  height: 60px;
+}
+
+.cheer-up > div > p {
+  cursor: pointer;
+  margin-top: 30px;
+  height: 25px;
+  font-size: 1.1vh;
+  text-decoration: underline;
+  background-color: rgb(0, 0, 0);
 }
