--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -41,7 +41,9 @@
   color: white;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
+.card-contents > h4:hover {
+  color: #39ff14;
+}
 
 @media screen and (max-width: 760px) {
 }
