--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -13,6 +13,20 @@
   max-width: 100%;
 }
 
+.blog-item-container > .imgDiv{
+  height: 100px;
+	padding: 10px;
+	border-radius: 5px;
+  display: flex;
+	background-size: auto;
+}
+
+.blog-item-container > img{
+  height: 100px;
+	padding: 10px;
+	border-radius: 5px;
+}
+
 .blog-item-container > p > a {
   color: blue;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
