--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -20,11 +20,19 @@
   display: flex;
 	background-size: auto;
 }
+.desc{
+  margin-left: 20px;
+}
+
+.desc > p{
+  font-size: smaller;
+  font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+}
 
 .blog-item-container > .imgDiv >img{
 	border-radius: 50%;
 	object-fit: cover;
-	cursor: pointer;
 }
 
 .blog-item-container > p > a {
