--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -14,7 +14,7 @@
 }
 
 .blog-item-container > .imgDiv{
-  height: 50px;
+  height: 50px; 
 	padding: 10px;
 	border-radius: 5px;
   display: flex;
@@ -22,7 +22,8 @@
 }
 .desc > *{
   margin-left: 20px;
-  font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family:  medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
 }
 
 .desc > p{
