--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -23,7 +23,7 @@
 .desc > *{
   margin-left: 20px;
   font-family:  medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  
+  line-height: 0%;
 }
 
 .desc > p{
