--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -5,15 +5,16 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
 }
 
-.blogs-container > p {
+.view {
 	text-decoration: underline;
 	cursor: pointer;
 	font-size: 1.4vh;
 	color: white;
 }
-.blogs-container > p:hover {
+.view > p:hover {
 	color: #39ff14;
 }
 
@@ -22,7 +23,7 @@
 		width: 70%;
 	}
 
-	.blogs-container > p {
+	.view {
 		font-size: 1.2vh;
 	}
 }
@@ -31,7 +32,7 @@
 	.blogs-container {
 		width: 80%;
 	}
-	.blogs-container > p {
+	.view {
 		font-size: 1vh;
 	}
 }
