--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -45,3 +45,6 @@
   color: blue;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+.blog-item-container > h4{
+  font-size: 30px;
+}
