--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -10,7 +10,7 @@
   text-align: left;
   color: black;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 .blog-item-container > .imgDiv{
@@ -22,7 +22,7 @@
 }
 .desc > *{
   margin-left: 20px;
-  font-family:  medium-content-sans-serif-font, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 0%;
 }
 
