--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -1,10 +1,18 @@
 .blogs-container {
-	width: 600px;
+	width: 300px;
 	text-align: center;
 	background-color: rgb(0, 0, 0);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
+}
+
+.blogs-container > .blogs{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	flex-wrap: wrap;
 
 }
 
@@ -20,7 +28,7 @@
 
 @media screen and (max-width: 760px) {
 	.blogs-container {
-		width: 70%;
+		width: 60%;
 	}
 
 	.view {
