--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,16 +1,18 @@
 .blog-item-container {
-  background-color: white;
-  margin: 10px;
+  /* background-color: rgb(221, 221, 221); */
+  background-color: rgb(27, 25, 25);
+  margin: 20px;
   cursor: pointer;
+  border-radius: 20px;
   
 }
 
 .blog-item-container > * {
   margin: 10px;
   text-align: left;
-  color: black;
+  color: rgb(255, 255, 255);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  /* max-width: 100%; */
+  max-width: 100%;
 }
 
 .blog-item-container > .imgDiv{
@@ -22,18 +24,19 @@
 }
 .desc > *{
   margin-left: 20px;
+  
   font-family:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 0%;
 }
 
 .desc > p{
   font-size: smaller;
-  color: black;
+  color: white;
 }
 
 .desc > span{
   font-size: x-small;
-  color: rgba(117, 117, 117, 1);
+  color: rgb(170, 170, 170);
 }
 
 .blog-item-container > .imgDiv >img{
@@ -42,9 +45,9 @@
 }
 
 .blog-item-container > p > a {
-  color: blue;
+  color: rgb(174, 174, 247);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .blog-item-container > h4{
-  font-size: 30px;
+  font-size: 28px;
 }
