--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -1,37 +1,28 @@
 .blogs-container {
-	width: 300px;
+	width: 500px;
 	text-align: center;
 	background-color: rgb(0, 0, 0);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-
 }
 
-.blogs-container > .blogs{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	flex-wrap: wrap;
-
-}
-
-.view {
+.blogs-container > p {
 	text-decoration: underline;
 	cursor: pointer;
 	font-size: 1.4vh;
 	color: white;
 }
-.view > p:hover {
+.blogs-container > p:hover {
 	color: #39ff14;
 }
 
 @media screen and (max-width: 760px) {
 	.blogs-container {
-		width: 60%;
+		width: 70%;
 	}
 
-	.view {
+	.blogs-container > p {
 		font-size: 1.2vh;
 	}
 }
@@ -40,7 +31,7 @@
 	.blogs-container {
 		width: 80%;
 	}
-	.view {
+	.blogs-container > p {
 		font-size: 1vh;
 	}
 }
