--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,10 +1,12 @@
 .blog-item-container {
-  /* background-color: rgb(221, 221, 221); */
   background-color: rgb(27, 25, 25);
   margin: 20px;
   cursor: pointer;
   border-radius: 20px;
   
+}
+.blog-item-container:hover {
+  border: 3px solid white;
 }
 
 .blog-item-container > * {
@@ -47,6 +49,9 @@
 .blog-item-container > p > a {
   color: rgb(174, 174, 247);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.blog-item-container > p > a:hover {
+  color: white;
 }
 .blog-item-container > h4{
   font-size: 28px;
