--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -49,11 +49,11 @@
 }
 
 .blog-item-container > p > a {
-  color: rgb(174, 174, 247);
+  color: rgb(155, 232, 140);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .blog-item-container > p > a:hover {
-  color: white;
+  color: #39ff14;
 }
 .blog-item-container > h4{
   font-size: 25px;
