--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -1,13 +1,17 @@
 .blogs-container {
 	width: 500px;
 	text-align: center;
-	background-color: rgb(0, 0, 0);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+
+	
 }
 .page-head >h3 > span{
+	display: inline-block;
+	background-color: black;
 	font-size: 3vh;
+	
   }
 
 .blogs-container > p {
