--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -3,11 +3,11 @@
   margin: 20px;
   cursor: pointer;
   border-radius: 20px;
-  
 }
 .blog-item-container:hover {
   border: 3px solid white;
 }
+
 
 .blog-item-container > * {
   margin: 10px;
@@ -19,7 +19,7 @@
 
 
 
-.blog-item-container > .imgDiv{
+ .imgDiv{
   height: 50px; 
 	padding: 10px;
 	border-radius: 5px;
