--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,7 +1,7 @@
 .blog-item-container {
   background-color: rgb(27, 25, 25);
   margin: 20px;
-  cursor: pointer;
+  /* cursor: pointer; */
   border-radius: 20px;
 }
 .blog-item-container:hover {
@@ -49,11 +49,12 @@
 }
 
 .blog-item-container > p > a {
-  color: rgb(155, 232, 140);
+  /* color: rgb(155, 232, 140); */
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .blog-item-container > p > a:hover {
   color: #39ff14;
+
 }
 .blog-item-container > h4{
   font-size: 25px;
